Profile: fix styles issue with img cropper

--- a/src/app/modules/lazy-routable/profile/pages/profile-container/profile-container.component.scss
+++ b/src/app/modules/lazy-routable/profile/pages/profile-container/profile-container.component.scss
@@ -52,6 +52,5 @@
 }
 
 .img-loader-wrap {
-  width: 400px;
-  height: 400px;
+  max-width: 400px;
 }
